--- a/TopGastroGuru/app/src/main/res/layout/activity_main.xml
+++ b/TopGastroGuru/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".view.activities.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,46 +17,17 @@
         android:layout_gravity="center_vertical">
 
         <EditText
-            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:minHeight="60dp"
             android:inputType="textEmailAddress" />
         <TextView
-            android:id="@+id/email_error"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="gone" />
-        <EditText
-            android:id="@+id/username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="60dp"
-            android:layout_margin="10dp"
-            android:inputType="textPersonName" />
-        <TextView
-            android:id="@+id/username_error"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="gone" />
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="60dp"
-            android:layout_margin="10dp"
-            android:inputType="textPassword" />
-        <TextView
-            android:id="@+id/password_error"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:visibility="gone" />
         <Button
-            android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
