--- a/TopGastroGuru/app/src/main/res/layout/activity_login_page.xml
+++ b/TopGastroGuru/app/src/main/res/layout/activity_login_page.xml
@@ -17,43 +17,60 @@
         android:layout_gravity="center_vertical">
 
         <EditText
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:minHeight="60dp"
+            android:hint="@string/email"
             android:inputType="textEmailAddress" />
         <TextView
+            android:id="@+id/email_error"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/this_is_a_required_field"
+            android:textColor="@color/red_error"
             android:layout_gravity="center"
             android:visibility="gone" />
         <EditText
+            android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="60dp"
             android:layout_margin="10dp"
+            android:hint="@string/username"
             android:inputType="textPersonName" />
         <TextView
+            android:id="@+id/username_error"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/this_is_a_required_field"
+            android:textColor="@color/red_error"
             android:layout_gravity="center"
             android:visibility="gone" />
         <EditText
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="60dp"
             android:layout_margin="10dp"
+            android:hint="@string/password"
             android:inputType="textPassword" />
         <TextView
+            android:id="@+id/password_error"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/this_is_a_required_field"
+            android:textColor="@color/red_error"
             android:layout_gravity="center"
             android:visibility="gone" />
         <Button
+            android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="150dp"/>
+            android:layout_marginTop="150dp"
+            android:text="@string/login" />
     </LinearLayout>
 
 
