Implement Read/Write users to db

--- a/TopGastroGuru/app/src/main/res/layout/activity_login_page.xml
+++ b/TopGastroGuru/app/src/main/res/layout/activity_login_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activities.ActivityLoginPage">
+    tools:context=".presentation.view.activities.ActivityLoginPage">
 
     <LinearLayout
         android:layout_width="match_parent"
