Modify ProfileFragment to be used for testing of MealDetailedView and make MealDetailedView work

--- a/TopGastroGuru/app/src/main/res/layout/fragment_meal_detailed.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_meal_detailed.xml
@@ -4,59 +4,73 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="15dp">
+    android:padding="15dp"
+    android:background="@color/black">
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="123dp"
-        android:layout_height="45dp"
+        android:layout_width="380dp"
+        android:layout_height="49dp"
         android:text="TextView"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/white"
+        android:textAllCaps="true"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/area"
-        android:layout_width="59dp"
-        android:layout_height="22dp"
+        android:textSize="10sp"
+        android:textColor="@color/white"
+        android:layout_width="267dp"
+        android:layout_height="28dp"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name" />
 
     <TextView
         android:id="@+id/instructions"
-        android:layout_width="346dp"
-        android:layout_height="89dp"
-        android:textAlignment="viewStart"
+        android:layout_width="335dp"
+        android:layout_height="223dp"
         android:text="TextView"
+        android:textAlignment="viewStart"
+        android:textColor="@color/white"
+        android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/area" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/photo"
+        android:layout_width="334dp"
+        android:layout_height="278dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/link"
         app:srcCompat="@drawable/logo" />
 
     <TextView
         android:id="@+id/category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="162dp"
+        android:layout_height="37dp"
         android:text="TextView"
+        android:textColor="@color/white"
+        android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/photo" />
 
     <TextView
         android:id="@+id/tags"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="42dp"
         android:text="TextView"
+        android:textColor="@color/white"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/photo" />
 
     <Button
         android:id="@+id/save"
@@ -69,8 +83,11 @@
 
     <TextView
         android:id="@+id/link"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:textSize="10sp"
+        android:paddingTop="5sp"
+        android:layout_width="366dp"
+        android:layout_height="22dp"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/instructions" />
