--- a/TopGastroGuru/app/src/main/res/layout/fragment_profile.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_profile.xml
@@ -11,4 +11,10 @@
         android:layout_height="match_parent"
         android:text="Profile Fragment" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="263dp"
+        android:layout_height="177dp"
+        android:text="testMealDetailed" />
+
 </FrameLayout>
