--- a/TopGastroGuru/app/src/main/res/layout/fragment_save_meal.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_save_meal.xml
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toBottomOf="@+id/area" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/photo" />
 
     <Button
         android:id="@+id/save"
