--- a/TopGastroGuru/app/src/main/res/layout/fragment_meal_detailed.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_meal_detailed.xml
@@ -11,7 +11,7 @@
         android:id="@+id/name"
         android:layout_width="380dp"
         android:layout_height="49dp"
-        android:text="TextView"
+        android:text="@string/item_not_available"
         android:layout_marginBottom="10dp"
         android:textColor="@color/white"
         android:textAllCaps="true"
@@ -25,7 +25,7 @@
         android:textColor="@color/white"
         android:layout_width="267dp"
         android:layout_height="28dp"
-        android:text="TextView"
+        android:text="string/item_not_available"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name" />
 
@@ -33,7 +33,7 @@
         android:id="@+id/instructions"
         android:layout_width="335dp"
         android:layout_height="223dp"
-        android:text="TextView"
+        android:text="string/item_not_available"
         android:textAlignment="viewStart"
         android:textColor="@color/white"
         android:textSize="13sp"
@@ -56,7 +56,7 @@
         android:id="@+id/category"
         android:layout_width="162dp"
         android:layout_height="37dp"
-        android:text="TextView"
+        android:text="string/item_not_available"
         android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +66,7 @@
         android:id="@+id/tags"
         android:layout_width="120dp"
         android:layout_height="42dp"
-        android:text="TextView"
+        android:text="string/item_not_available"
         android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
         android:paddingTop="5sp"
         android:layout_width="366dp"
         android:layout_height="22dp"
-        android:text="TextView"
+        android:text="string/item_not_available"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/instructions" />
 </androidx.constraintlayout.widget.ConstraintLayout>
