--- a/TopGastroGuru/app/src/main/res/layout/fragment_save_meal.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_save_meal.xml
@@ -11,7 +11,7 @@
         android:id="@+id/name"
         android:layout_width="123dp"
         android:layout_height="45dp"
-        android:text="TextView"
+        android:text="@string/item_not_available"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,7 +19,7 @@
         android:id="@+id/area"
         android:layout_width="59dp"
         android:layout_height="22dp"
-        android:text="TextView"
+        android:text="@string/item_not_available"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name" />
 
@@ -28,7 +28,7 @@
         android:layout_width="346dp"
         android:layout_height="89dp"
         android:textAlignment="viewStart"
-        android:text="TextView"
+        android:text="@string/item_not_available"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/area" />
@@ -40,14 +40,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fotoInstruction"
+        app:layout_constraintTop_toBottomOf="@+id/photoBT"
         app:srcCompat="@drawable/logo" />
 
     <TextView
         android:id="@+id/category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="@string/item_not_available"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/photo" />
 
@@ -63,7 +63,7 @@
         android:id="@+id/link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="@string/item_not_available"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/instructions" />
 
@@ -98,16 +98,17 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="dorucak"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.575"
         app:layout_constraintStart_toEndOf="@+id/datePicker"
         app:layout_constraintTop_toBottomOf="@+id/vremeTV" />
 
-    <TextView
-        android:id="@+id/fotoInstruction"
+    <Button
+        android:id="@+id/photoBT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dodirni sliku da bi je promenio"
+        android:text="@string/photo_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/datePicker" />
 
@@ -115,9 +116,11 @@
         android:id="@+id/quit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
         android:text="@string/quit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/save"
+        app:layout_constraintHorizontal_bias="0.471"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
