--- a/TopGastroGuru/app/src/main/res/layout/fragment_statistics.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_statistics.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.view.activities.fragments.StatisticsFragment">
+    tools:context=".presentation.view.fragments.StatisticsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
