--- a/TopGastroGuru/app/src/main/res/layout/fragment_filter_meals.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_filter_meals.xml
@@ -24,13 +24,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <Button
+            android:id="@+id/removeFilterBtn"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="0dp"
+            android:padding="0dp"
+            android:layout_weight="1"
+            android:text="@string/remove_filter" />
+
         <Button
             android:id="@+id/categoryFilterBtn"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="0dp"
             android:padding="0dp"
-            android:layout_weight="1"
+            android:layout_weight="3"
             android:text="@string/filter_by_category" />
 
         <Button
@@ -38,7 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="0dp"
-            android:layout_weight="1"
+            android:layout_weight="3"
             android:padding="0dp"
 
             android:text="@string/filter_by_area" />
@@ -49,7 +59,7 @@
             android:layout_height="0dp"
             android:layout_margin="0dp"
             android:padding="0dp"
-            android:layout_weight="1"
+            android:layout_weight="3"
             android:text="@string/filter_by_ingredient" />
 
     </LinearLayout>
