--- a/TopGastroGuru/app/src/main/res/values/themes.xml
+++ b/TopGastroGuru/app/src/main/res/values/themes.xml
@@ -1,5 +1,25 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <!-- Base application theme. -->
+    <style name="Theme.TopGastroGuru" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
 
-    <style name="Theme.TopGastroGuru" parent="android:Theme.Material.Light.NoActionBar" />
+
+        <!-- Customize your theme here. -->
+        <item name="colorTertiary">@color/teal_700</item>
+        <item name="colorSurface">@color/teal_200</item>
+
+        <item name="colorOutline">#98C5D6</item>
+
+
+        <item name="textAppearanceBody1">@color/black</item>
+    </style>
 </resources>
