--- a/TopGastroGuru/app/src/main/res/layout/fragment_all_meals.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_all_meals.xml
@@ -13,7 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:weightSum="5">
+        android:weightSum="7">
         <EditText
             android:id="@+id/inputEt"
             android:layout_weight="3"
@@ -23,18 +23,20 @@
             android:layout_marginStart="16dp"
             app:layout_goneMarginEnd="16dp"
             android:layout_marginEnd="16dp" />
-        <Button
-            android:id="@+id/sortBtn"
-            android:layout_weight="1"
+        <Spinner
+            android:id="@+id/sortSpinner"
+            android:layout_weight="3"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Sort"/>
+            android:layout_height="wrap_content" />
         <Button
             android:id="@+id/filterBtn"
-            android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Filter"/>
+            android:layout_weight="1"
+            android:gravity="center_vertical|start"
+            android:drawableLeft="@drawable/ic_filter_icon"
+            android:paddingLeft="15dp"
+            android:layout_marginRight="5dp"/>
     </LinearLayout>
 
 
