--- a/TopGastroGuru/app/src/main/res/layout/fragment_save_meal.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_save_meal.xml
@@ -33,15 +33,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/area" />
 
+<!--    ChatGpt generated-->
     <ImageView
         android:id="@+id/photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="16:9"
         app:layout_constraintTop_toBottomOf="@+id/photoBT"
         app:srcCompat="@drawable/logo" />
+
+<!--    <ImageView-->
+<!--        android:id="@+id/photo"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.491"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/photoBT"-->
+<!--        app:srcCompat="@drawable/logo" />-->
 
     <TextView
         android:id="@+id/category"
