--- a/TopGastroGuru/app/src/main/res/layout/fragment_all_meals.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_all_meals.xml
@@ -8,35 +8,58 @@
 
     <LinearLayout
         android:id="@+id/topPanel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:weightSum="7">
-        <EditText
-            android:id="@+id/inputEt"
-            android:layout_weight="3"
-            android:layout_width="0dp"
+        android:orientation="vertical">
+        <LinearLayout
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:weightSum="7">
+            <EditText
+                android:id="@+id/inputEt"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
 
-            android:layout_marginStart="16dp"
-            app:layout_goneMarginEnd="16dp"
-            android:layout_marginEnd="16dp" />
-        <Spinner
-            android:id="@+id/sortSpinner"
-            android:layout_weight="3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/filterBtn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_vertical|start"
-            android:drawableLeft="@drawable/ic_filter_icon"
-            android:paddingLeft="15dp"
-            android:layout_marginRight="5dp"/>
+                android:layout_marginStart="16dp"
+                app:layout_goneMarginEnd="16dp"
+                android:layout_marginEnd="16dp" />
+            <Spinner
+                android:id="@+id/sortSpinner"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/filterBtn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_vertical|start"
+                android:drawableLeft="@drawable/ic_filter_icon"
+                android:paddingLeft="15dp"
+                android:layout_marginRight="5dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/backwardBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Backward" />
+            <Button
+                android:id="@+id/forwardBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Forward" />
+
+        </LinearLayout>
     </LinearLayout>
 
 
