--- a/TopGastroGuru/app/src/main/res/layout/fragment_profile.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_profile.xml
@@ -1,20 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="?colorSurface"
     android:layout_height="match_parent"
     tools:context=".presentation.view.fragments.ProfileFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Profile Fragment" />
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="70dp"
+            android:src="@drawable/ic_profile_picture" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ivan Jevtić"
+            android:textSize="30sp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            tools:ignore="HardcodedText" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="263dp"
-        android:layout_height="177dp"
-        android:text="testMealDetailed" />
+        <TextView
+            android:id="@+id/emailTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ivan@ivan.com"
+            android:textSize="30sp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            tools:ignore="HardcodedText" />
+    </LinearLayout>
 
-</FrameLayout>
+
+    <LinearLayout
+        android:layout_marginBottom="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="vertical">
+        <EditText
+            android:visibility="gone"
+            android:id="@+id/old_password_edit_text"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="15dp"
+            android:ems="10"
+            android:hint="@string/old_password"
+            android:inputType="textPassword" />
+        <EditText
+            android:visibility="gone"
+            android:id="@+id/new_password_edit_text"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="15dp"
+            android:ems="10"
+            android:hint="@string/new_password"
+            android:inputType="textPassword" />
+        <Button
+            android:id="@+id/change_password_button"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="15dp"
+            android:text="@string/change_password" />
+        <Button
+            android:visibility="gone"
+            android:id="@+id/update_password_button"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="15dp"
+            android:text="@string/update_password" />
+        <Button
+            android:visibility="gone"
+            android:id="@+id/give_up_button"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="15dp"
+            android:text="@string/give_up" />
+
+        <Button
+            android:id="@+id/logout_button"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/log_out" />
+
+    </LinearLayout>
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
