--- a/TopGastroGuru/app/src/main/res/layout/fragment_edit_meal.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_edit_meal.xml
@@ -54,10 +54,10 @@
         app:layout_constraintTop_toBottomOf="@+id/photo" />
 
     <Button
-        android:id="@+id/save"
+        android:id="@+id/edit"
         android:layout_width="203dp"
         android:layout_height="56dp"
-        android:text="@string/save"
+        android:text="@string/edit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -115,13 +115,13 @@
         app:layout_constraintTop_toBottomOf="@+id/datePicker" />
 
     <Button
-        android:id="@+id/quit"
+        android:id="@+id/delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
-        android:text="@string/quit"
+        android:text="@string/delete"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/save"
+        app:layout_constraintEnd_toStartOf="@+id/edit"
         app:layout_constraintHorizontal_bias="0.471"
         app:layout_constraintStart_toStartOf="parent" />
 
