--- a/TopGastroGuru/app/src/main/res/layout/fragment_all_meals.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_all_meals.xml
@@ -129,6 +129,19 @@
         app:layout_constraintTop_toBottomOf="@id/topPanel"
         app:layout_constraintBottom_toBottomOf="parent"
         android:paddingTop="16dp"
+        android:visibility="gone"
+        android:clipToPadding="false"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listRvCategories"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topPanel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingTop="16dp"
+        android:visibility="gone"
         android:clipToPadding="false"/>
 
     <ProgressBar
