--- a/TopGastroGuru/app/src/main/res/menu/bottom_navigation.xml
+++ b/TopGastroGuru/app/src/main/res/menu/bottom_navigation.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/navigation_3"
-        android:icon="@drawable/account"
+        android:icon="@drawable/ic_plus"
         android:title="@string/diet_plan" />
 
     <item
