--- a/TopGastroGuru/app/src/main/res/layout/layout_item_meal.xml
+++ b/TopGastroGuru/app/src/main/res/layout/layout_item_meal.xml
@@ -19,7 +19,7 @@
         android:src="@drawable/ic_task">
 
     </ImageView>
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="5"
         android:layout_height="match_parent"
@@ -33,20 +33,20 @@
             android:text="MealTitle"
             android:textSize="20sp"
             android:layout_marginLeft="20dp"
-            android:layout_marginVertical="10dp"
+            android:layout_marginVertical="5dp"
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
             android:id="@+id/calTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:text="@string/item_not_available"
             android:textSize="20sp"
             android:layout_marginLeft="20dp"
             android:layout_marginVertical="10dp"
             app:layout_constraintEnd_toEndOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 </LinearLayout>
