--- a/TopGastroGuru/app/src/main/res/layout/fragment_meal_detailed.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_meal_detailed.xml
@@ -91,4 +91,12 @@
         android:text="string/item_not_available"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/instructions" />
+
+    <TextView
+        android:id="@+id/calValueTV"
+        android:layout_width="115dp"
+        android:layout_height="28dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
