--- a/TopGastroGuru/app/src/main/res/layout/fragment_save_meal.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_save_meal.xml
@@ -80,6 +80,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/link" />
 
+    <TextView
+        android:id="@+id/calValueTV"
+        android:layout_width="115dp"
+        android:layout_height="28dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/name" />
+
     <Button
         android:id="@+id/datePicker"
         android:layout_width="wrap_content"
