--- a/TopGastroGuru/app/src/main/res/layout/fragment_overview.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_overview.xml
@@ -43,7 +43,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
             <TextView
                 android:id="@+id/mondayTv"
                 android:layout_width="wrap_content"
@@ -59,7 +60,8 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
             <TextView
                 android:id="@+id/tuesdayTv"
                 android:layout_width="wrap_content"
@@ -75,7 +77,8 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
             <TextView
                 android:id="@+id/fridayTv"
                 android:layout_width="wrap_content"
