--- a/TopGastroGuru/app/src/main/res/layout/layout_item_saved_meal.xml
+++ b/TopGastroGuru/app/src/main/res/layout/layout_item_saved_meal.xml
@@ -20,31 +20,26 @@
         android:src="@drawable/ic_task">
 
     </ImageView>
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="5"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
             android:id="@+id/titleTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:text="Meal Title"
+            android:text="Meal title"
             android:textSize="20sp"
-            android:layout_margin="10dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_margin="10dp"/>
         <TextView
             android:id="@+id/caloriesTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="55kcal"
+            android:text="Not available"
             android:textSize="15sp"
-            android:layout_margin="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_margin="10dp"/>
+    </LinearLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_weight="1"
         android:layout_width="0dp"
