--- a/TopGastroGuru/app/src/main/res/layout/fragment_meal_plan.xml
+++ b/TopGastroGuru/app/src/main/res/layout/fragment_meal_plan.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"/>
+        android:minHeight="?attr/actionBarSize"
+        android:backgroundTint="@color/darkerP"/>
 <!--        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" -->
 
     <androidx.viewpager2.widget.ViewPager2
