--- a/TopGastroGuru/app/src/main/res/menu/bottom_navigation.xml
+++ b/TopGastroGuru/app/src/main/res/menu/bottom_navigation.xml
@@ -3,12 +3,12 @@
 
     <item
         android:id="@+id/navigation_1"
-        android:icon="@drawable/calendar"
+        android:icon="@drawable/ic_meal"
         android:title="@string/all_meals" />
 
     <item
         android:id="@+id/navigation_2"
-        android:icon="@drawable/checklist"
+        android:icon="@drawable/ic_like"
         android:title="@string/my_meals" />
 
     <item
@@ -18,7 +18,7 @@
 
     <item
         android:id="@+id/navigation_4"
-        android:icon="@drawable/checklist"
+        android:icon="@drawable/ic_chart"
         android:title="@string/statistics" />
 
     <item
