--- a/TopGastroGuru/app/src/main/res/values/themes.xml
+++ b/TopGastroGuru/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.TopGastroGuru" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">#526869</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -14,8 +14,8 @@
 
 
         <!-- Customize your theme here. -->
-        <item name="colorTertiary">@color/teal_700</item>
-        <item name="colorSurface">@color/teal_200</item>
+        <item name="colorTertiary">#729EA1</item>
+        <item name="colorSurface">#D78615</item>
 
         <item name="colorOutline">#98C5D6</item>
 
